# holou

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml
bot/: Cargo.toml
bot/src/: main.rs
bot/src/commands/: meta.rs
bot/src/utils/: types.rs
disboard/: Cargo.toml
disboard/src/: geo.rs  lib.rs  voronoi.rs
holou/: Cargo.toml
holou/src/utils/: format.rs
scripts/: update_commands.py
