[package]
name = "holou"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
poise = "0.6.1"
serenity = { version = "0.12.2", default-features = false, features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.40.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
